# openpilot

./: .env  .env_example  .gitignore  AGENTS.md  API.md  CODE_STRUCTURE_REFACTOR.md  INSTALL.md  OPENPILOT_ENHANCEMENT_PLAN.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  README.md  THOUGHT_ARCHITECTURE.md  Thought.md  environment.yml  requirements.txt  test_fix.sh  重构计划.md
Code/: .env  .env.example  .gitignore  BUGFIX_AUTOPILOT_EXECUTION.md  BUGFIX_AUTOPILOT_HANGING_UI.md  BUGFIX_COMMANDS_AND_VALIDATION.md  BUGFIX_TASK_EXECUTION_CONTEXT.md  BUGFIX_VALIDATION_ERROR.md  COMMAND_REGISTRY.md  DEBUGGING_SUMMARY.md  ENHANCED_UI_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_PLAN.md  TOOLS_REFACTORING.md  WORK_SUMMARY.md  debug_tools.py  demo_code_generation.py  demo_goal_understanding.py  demo_reflection.py  demo_tool_executor.py  demo_tool_orchestration.py  demo_tool_registry.py  demo_ui.py  demo_validation.py  improvement.md  index.md  pyproject.toml  requirements.txt  test_autocomplete.py  test_autopilot_fix.py  test_completion.py  test_llm_connection.py  test_method_call.py  test_no_console.py  test_snake_game.py  test_tool_registry.py  test_ui_only.py  test_with_trace.py  verify_task_log.py  (+1 more)
Code/.claude/: settings.local.json
Code/examples/: preference_reuse_example.py
Code/generated_agents/: generated_agent.py
Code/logs/: openpilot.jsonl  workflow.jsonl
Code/src/: __init__.py  update_imports.py
Code/tests/: test_agent_module_relocation.py  test_agent_runtime_controller.py  test_autonomous_iteration_pipeline.py  test_cli.py  (+68 more)
(+327 files in other folders)
