[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpilot"
version = "0.1.0"
description = "Modern OpenPilot AI agent system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "httpx[socks]>=0.24.0",
    "socksio>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
    "numpy>=1.24.0",
    "packaging>=24.0",
]

[project.scripts]
openpilot = "ui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
